[gd_scene load_steps=2 format=3 uid="uid://v4awm7nnmhat"]

[ext_resource type="Script" path="res://UI/enzymes_panel_ui.gd" id="1_wv2vi"]

[node name="EnzymesPanelUI" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1920.0
offset_right = -1580.0
offset_bottom = 300.0
grow_horizontal = 0
mouse_force_pass_scroll_events = false
script = ExtResource("1_wv2vi")

[node name="PanelContainer" type="PanelContainer" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0

[node name="WindowTileLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
text = "Enzymes"

[node name="enzymes_help_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Enzymes are used for decomposition of substances and matter. 
Absorbers also need enzymes to function. 
Produced by mycelium."
text = " ? "

[node name="CloseEnzymesButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="Spacer12_0" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="mycelium_tiles_amount_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
text = "Mycelium tiles : 341"

[node name="environmental_bonus" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
text = "Environmental bonus:"

[node name="water_bonus" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Water Bonus: Your expansion into water-rich territories has enhanced the local ecosystem. Current water availability increases enzyme production efficiency by +X%."
mouse_filter = 0
text = "- Water Bonus: 1.2"

[node name="production_bonus_due_to_water_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Strategic Hydration Advantage: Leveraging water-rich areas has granted a +Y% bonus to your enzyme production, reflecting your adept management of the colony's resources."
mouse_filter = 0
text = "- Hydration Bonus: 100%"

[node name="Spacer12_3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="energy_input_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
text = "Energy input: 0.42"

[node name="Spacer12_1" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="ProductionPercentLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
text = "Production: 100%"

[node name="ProductionHSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
value = 100.0

[node name="Spacer12_2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="last_enzyme_output" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
mouse_filter = 0
text = "Enzymes output: 1.4"

[node name="efficiency_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
mouse_filter = 0
text = "Efficiency: 100%"
